<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/detail_image_item"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/food_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/title"
            app:layout_constraintStart_toEndOf="@id/detail_image_item"
            app:layout_constraintTop_toTopOf="@id/detail_image_item"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/detail_title_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/title"
            app:layout_constraintStart_toEndOf="@id/detail_image_item"
            app:layout_constraintTop_toBottomOf="@id/food_label"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/place_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/place"
            app:layout_constraintStart_toEndOf="@id/detail_image_item"
            app:layout_constraintTop_toBottomOf="@id/detail_title_item"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/detail_place_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/place"
            app:layout_constraintStart_toEndOf="@id/detail_image_item"
            app:layout_constraintTop_toBottomOf="@id/place_label"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/ingredient_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/ingredient"
            app:layout_constraintStart_toEndOf="@id/detail_image_item"
            app:layout_constraintTop_toBottomOf="@id/detail_place_item"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/detail_ingredient_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/ingredient"
            app:layout_constraintStart_toEndOf="@id/detail_image_item"
            app:layout_constraintTop_toBottomOf="@id/ingredient_label"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/share"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_image_item" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="301dp" />

        <TextView
            android:id="@+id/description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/detail_description_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_label"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>